# eMeat

./: .gitignore  README.rst  alembic.ini  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
alembic_migrations/: script.py.mako
emeat/: conf.py  main.py
emeat/controllers/: event.py
emeat/db/: models.py
emeat/db/migration/: alembic.ini  cli.py  migrate.py
emeat/db/migration/alembic_migrations/: env.py
emeat/db/migration/alembic_migrations/versions/: 1a465a5981bc_base.py
emeat/middleware/: json.py
emeat/tests/: base.py  test_app.py
html/: emeat.css  index.html  meat.js
html/static/css/: emeat.css
html/static/js/: emeat.js
