[metadata]
name = eMeat
version = 0.0.1
summary = Simple replacement for AnyVite supporting one invite
description-file =
    README.rst
author = Sachi King
author-email = nakato@nakato.io
home-page = https://nakato.io
classifier =
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: Customer Service
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[pbr]
warnerrors = True
